--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<body>
-    <h1>Test</h1>
-    <p>Ivankov Artem Ruslanovich, SP-31</p>
-</body>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Test</h1>
+        <p>Ivankov Artem Ruslanovich, SP-31</p>
+    </body>
+</html>
