Added new index and other

--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Test</h1>
-        <p>Ivankov Artem Ruslanovich, SP-31</p>
-    </body>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <title>Заголовок сторінки</title>
+    <link rel="stylesheet" href="index_style.css">
+</head>
+<body>
+
+<div class="main-container">
+
+    <div class="content-area">
+
+        <div class="left-content">
+
+            <div class="header-title">Заголовок сторінки</div>
+
+            <div class="section">
+                <div class="text-block">Біографія (1 речення)<a href="Biography.html" class="details-link">Детальніше >></a></div>
+                
+            </div>
+
+            <div class="section">
+                <div class="text-block">Група (1 речення)<a href="Group.html" class="details-link">Детальніше >></a></div>
+                
+            </div>
+
+            <div class="hobbies-row">
+                <div class="hobby">
+                    Хоббі 1 (1 речення)<br>
+                    <a href="hobby1.html">Детальніше >></a>
+                </div>
+                <div class="hobby">
+                    Хоббі 2 (1 речення)<br>
+                    <a href="hobby2.html">Детальніше >></a>
+                </div>
+                <div class="hobby">
+                    Хоббі 3 (1 речення)<br>
+                    <a href="hobby3.html">Детальніше >></a>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="text-block">Цікаве 1 (1 речення)<a href="interesting1.html" class="details-link">Детальніше >></a></div>
+            </div>
+
+            <div class="section">
+                <div class="text-block">Цікаве 2 (1 речення)<a href="interesting2.html" class="details-link">Детальніше >></a></div>
+            </div>
+
+            <div class="section">
+                <div class="text-block">Цікаве 3 (1 речення)<a href="interesting3.html" class="details-link">Детальніше >></a></div>
+            </div>
+
+        </div>
+
+        <div class="right-ad-block">
+            Рекламний блок<br>(високий)
+        </div>
+
+    </div>
+
+    <div class="footer-ads">
+        <div class="footer-ad long">Рекламний блок 1</div>
+        <div class="footer-ad short">Рекламний блок 2</div>
+        <div class="footer-ad short">Рекламний блок 3</div>
+    </div>
+
+</div>
+
+</body>
 </html>
