--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
             <div class="header-title">Заголовок сторінки</div>
 
             <div class="section">
-                <div class="text-block">Біографія (1 речення)<a href="Biography.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Біографія<a href="Biography.html" class="details-link">Детальніше >></a></div>
                 
             </div>
 
             <div class="section">
-                <div class="text-block">Група (1 речення)<a href="Group.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Група<a href="Group.html" class="details-link">Детальніше >></a></div>
                 
             </div>
 
             <div class="hobbies-row">
                 <div class="hobby">
-                    Хоббі 1 (1 речення)<br>
-                    <a href="hobby1.html">Детальніше >></a>
+                    Хоббі 1<br>
+                    <a href="Hobby.html">Детальніше >></a>
                 </div>
                 <div class="hobby">
-                    Хоббі 2 (1 речення)<br>
-                    <a href="hobby2.html">Детальніше >></a>
+                    Хоббі 2<br>
+                    <a href="Hobby.html">Детальніше >></a>
                 </div>
                 <div class="hobby">
-                    Хоббі 3 (1 речення)<br>
-                    <a href="hobby3.html">Детальніше >></a>
+                    Хоббі 3<br>
+                    <a href="Hobby.html">Детальніше >></a>
                 </div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 1 (1 речення)<a href="interesting1.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 1<a href="interesting1.html" class="details-link">Детальніше >></a></div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 2 (1 речення)<a href="interesting2.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 2<a href="interesting2.html" class="details-link">Детальніше >></a></div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 3 (1 речення)<a href="interesting3.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 3<a href="interesting3.html" class="details-link">Детальніше >></a></div>
             </div>
 
         </div>
