--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 1<a href="interesting1.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 1<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 2<a href="interesting2.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 2<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 3<a href="interesting3.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве 3<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
 
         </div>
