--- a/Group.html
+++ b/Group.html
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="header">Заголовок сторінки</div>
         <div class="content">
+            <div class="Image"><img src="https://dl.tntu.edu.ua/themes/Australia/images/tntu_logo_vector.svg"/></div>
             <div class="centre">Група: Today I gethered you all here for one thing
                 but how would i do so? <br/> Right, I wouldn't krill
             </div>
