Background And Ad

--- a/Group.html
+++ b/Group.html
@@ -7,19 +7,29 @@
 </head>
 <body>
     <div class="container">
+
+
+        <div class="top_bar">
+            <div><a href="index.html" class="details-link">Назад на головну</a></div>
+
+            <div><a href="Biography.html" class="details-link">Біографія</a></div>
+
+            <div><a href="Hobby.html" class="details-link">Хоббі</a></div>
+
+            <div><a href="Interesting.html" class="details-link">Цікаве</a></div>
+        </div>
+
+
         <div class="header">Заголовок сторінки</div>
         <div class="content">
             <div class="Image"><img src="https://dl.tntu.edu.ua/themes/Australia/images/tntu_logo_vector.svg"/></div>
-            <div class="centre">Група: Today I gethered you all here for one thing
-                but how would i do so? <br/> Right, I wouldn't krill
+            <div class="centre">Ця сторніка присвячена університету та гріпі, в якій я знаходжусь.
             </div>
         </div>
     </div>
 
     <div class ="Adds">
-        <div class="footer-ad">Рекламний блок 1</div>
-        <div class="footer-ad">Рекламний блок 2</div>
-        <div class="footer-ad">Рекламний блок 3</div>
+        <div class="footer-ad"><img src="https://www.bu.edu/globalprograms/files/2015/05/banner-placeholder.png"></div>
     </div>
 </body>
 </html>
