--- a/Hobby.html
+++ b/Hobby.html
@@ -2,27 +2,41 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Заголовок сторінки</title>
+    <title>Хоббі</title>
     <link rel="stylesheet" href="hobby_style.css">
 </head>
 <body>
     <div class="main-container">
+        <div class="top_bar">
+            <div><a href="index.html" class="details-link">Назад на головну</a></div>
+
+            <div><a href="Biography.html" class="details-link">Біографія</a></div>
+
+            <div><a href="Hobby.html" class="details-link">Хоббі</a></div>
+
+            <div><a href="Interesting.html" class="details-link">Цікаве</a></div>
+        </div>
         <div class="content-area">
 
             <div class="left-content">
                 <div class="container">
     
-                    <div class="header">Заголовок сторінки</div>
+                    <div class="header">Хоббі</div>
                     <div class="content">
-                        <div class="left"> <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" /><br/>Хоббі 1</div>
-                        <div class="midle"> So me core</div>
-                        <div class="right">Хобі 3</div>
+                        <div class="left"> <p><h1>Відеоігри</h1></p>
+                            <p>Відеоігри — це не лише розвага, а й спосіб зануритись у захопливі світи з цікавими сюжетами та головоломками. 
+                                Від інді‑проектів до масштабних RPG, вони розвивають реакцію, стратегічне мислення й дають змогу спілкуватися з друзями онлайн.</p></div>
+                        <div class="midle"> <p><h1>Ретро‑техніка</h1></p>
+                            <p>Колекціонування та відновлення ретро‑техніки (старі ігрові консолі, вінілові програвачі, радіоприймачі) дозволяє доторкнутися до історії електроніки, знайти унікальні пристрої й відчути ностальгію за епохою «перших» ґаджетів.</p>
+                            </div>
+                        <div class="right"><p><h1>Гра на гітарі</h1></p> <p>Гітара — відмінний інструмент для розвитку музичного слуху й моторики рук; 
+                            кілька акордів — і ваш улюблений трек грає у домашній атмосфері.</p></div>
                     </div>
                 </div>
             </div>
     
             <div class="right-ad-block">
-                Рекламний блок<br>(високий)
+                <img src="https://st4.depositphotos.com/6011906/23015/i/450/depositphotos_230156122-stock-photo-vertical-empty-billboard-placeholder-template.jpg">
             </div>
         </div>
     </div>
