--- a/Biography.html
+++ b/Biography.html
@@ -2,15 +2,33 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Заголовок сторінки</title>
+    <title>Загальна інформація</title>
     <link rel="stylesheet" href="Biography_style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">Заголовок сторінки</div>
+
+        <div class="top_bar">
+            <div><a href="index.html" class="details-link">Назад на головну</a></div>
+
+            <div><a href="Biography.html" class="details-link">Загальна інформація</a></div>
+
+            <div><a href="Hobby.html" class="details-link">Хоббі</a></div>
+
+            <div><a href="Interesting.html" class="details-link">Цікаве</a></div>
+        </div>
+
+        <div class="header">Загальна інформація</div>
         <div class="content">
-            <div class="left"> <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" /></div>
-            <div class="right">Біографія</div>
+            <div class="left"> <img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3433873/html5-icon-md.png" width="200"/></div>
+            <div class="right"><p><h1>Про сайт</h1></p>
+                <p>Цей сайт створений з навчальною метою — я розробляю його для ознайомлення з основами веб‑розробки, включно з HTML, CSS та принципами побудови структури сторінок.
+                    
+<p>Я цікавлюсь технологіями, зокрема люблю експериментувати з веб‑технологіями, а також маю кілька захоплень, які надихають мене у творчості. 
+    Серед них — відеоігри, де я іноді створюю власні ігрові прототипи, ретро‑техніка, яку люблю досліджувати й відновлювати, 
+    та гра на гітарі, що допомагає відпочити й перемикнутися після роботи з кодом.</p>
+                </p>
+                </div>
         </div>
     </div>
 </body>
