--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
             <div class="section">
-                <div class="text-block">Моя коротка біографія<a href="Biography.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Загальна інформація<a href="Biography.html" class="details-link">Детальніше >></a></div>
                 
             </div>
 
@@ -28,21 +28,21 @@
 
             <div class="hobbies-row">
                 <div class="hobby">
-                    Хоббі 1<br>
+                    Хоббі<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
                 <div class="hobby">
-                    Хоббі 2<br>
+                    Ретро‑техніка<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
                 <div class="hobby">
-                    Хоббі 3<br>
+                    Гітара<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
             </div>
 
             <div class="section">
-                <div class="text-block">Цікаве 1<a href="Interesting.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Цікаве про тварин<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
 
         </div>
