--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div class="right-ad-block">
             <img src="https://study.com/cimages/multimages/16/burgerad15179945781952220614.png">
         </div>
-
+<!-- Elfsight Countdown Timer | Untitled Countdown Timer -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-9e6ef18e-39fd-42af-886a-eff576b9bba1" data-elfsight-app-lazy></div>
     </div>
 
     <div class="footer-ads">
