Added more widgets

--- a/Group.html
+++ b/Group.html
@@ -31,5 +31,8 @@
     <div class ="Adds">
         <div class="footer-ad"><img src="https://www.bu.edu/globalprograms/files/2015/05/banner-placeholder.png"></div>
     </div>
+<!-- Elfsight Background Music | Untitled Background Music -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-b5bd1f33-b231-4713-b93f-6be8e7d2ed5b" data-elfsight-app-lazy></div>
 </body>
 </html>
