--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 <div class="main-container">
 
+<!-- Elfsight Age Verification | Untitled Age Verification -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-365b930b-55b7-4856-929d-c039ef232a47" data-elfsight-app-lazy></div>
+
+<!-- Elfsight Cookie Consent | Untitled Cookie Consent -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-2b67ebfa-f079-4512-af0d-389174bd74cc" data-elfsight-app-lazy></div>
+
     <div class="header-title">Мій сайт</div>
 
     <div class="content-area">
@@ -44,7 +52,11 @@
             <div class="section">
                 <div class="text-block">Цікаве про тварин<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
-
+            <div class="section">
+                <!-- Elfsight Weather | Untitled Weather -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-eac23bac-ee70-43a7-ad77-ea9cd41bb750" data-elfsight-app-lazy></div>
+            </div>
         </div>
 
         <div class="right-ad-block">
@@ -53,6 +65,10 @@
 <!-- Elfsight Countdown Timer | Untitled Countdown Timer -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-9e6ef18e-39fd-42af-886a-eff576b9bba1" data-elfsight-app-lazy></div>
+
+<!-- Elfsight Background Music | Untitled Background Music -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-b5bd1f33-b231-4713-b93f-6be8e7d2ed5b" data-elfsight-app-lazy></div>
     </div>
 
     <div class="footer-ads">
