--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Заголовок сторінки</title>
     <link rel="stylesheet" href="index_style.css">
+    <link rel="stylesheet" href="Menu.css">
 </head>
-<body>
+<body onclick="hideMenu()" oncontextmenu="showMenu(event); return false;">
+
+<script src="Menu.js"></script>
 
 <div class="main-container">
 
@@ -52,6 +55,11 @@
             <div class="section">
                 <div class="text-block">Цікаве про тварин<a href="Interesting.html" class="details-link">Детальніше >></a></div>
             </div>
+
+            <div class="section">
+                <div class="text-block">Лабораторна №9<a href="Lab8.html" class="details-link">Детальніше >></a></div>
+            </div>
+
             <div class="section">
                 <!-- Elfsight Weather | Untitled Weather -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
@@ -78,6 +86,15 @@
     </div>
 
 </div>
+
+<div id="custommenu">
+  <div onclick="doAction('copy')">Скопіювати вміст документа</div>
+  <div onclick="doAction('close')">Закрити вікно</div>
+  <div onclick="doAction('fontIncrease')">Збільшити шрифт</div>
+  <div onclick="doAction('fontDecrease')">Зменшити шрифт</div>
+  <div onclick="doAction('changeBkg')">Змінити фон</div>
+</div>
+
 
 </body>
 </html>
