--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Заголовок сторінки</title>
     <link rel="stylesheet" href="index_style.css">
-    <link rel="stylesheet" href="Menu.css">
-    <script src="Menu.js"></script>
+    <link rel="stylesheet" href="./lab10/Menu.css">
+    <script src="./lab10/Menu.js"></script>
 </head>
 <body onclick="hideMenu()" oncontextmenu="showMenu(event); return false;">
 
-<script src="ImageHover.js"></script>
-<script src="NumberOnly.js"></script>
+<script src="./lab10/ImageHover.js"></script>
+<script src="./lab10/NumberOnly.js"></script>
 
 <div class="main-container">
 
@@ -39,16 +39,16 @@
                 
             </div>
 
-            <div class="hobbies-row">
-                <div class="hobby">
+            <div class="Tripple">
+                <div class="oneOf">
                     Хоббі<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
-                <div class="hobby">
+                <div class="oneOf">
                     Ретро‑техніка<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
-                <div class="hobby">
+                <div class="oneOf">
                     Гітара<br>
                     <a href="Hobby.html">Детальніше >></a>
                 </div>
@@ -59,11 +59,29 @@
             </div>
 
             <div class="section">
-                <div class="text-block">Лабораторна №9<a href="Lab9.html" class="details-link">Детальніше >></a></div>
+                <div class="text-block">Лабораторна №9<a href="./lab9/Lab9.html" class="details-link">Детальніше >></a></div>
             </div>
 
             <div class="section">
                 <div class="text-block"><label>Перевірка вводу <input type="text" id="digitOnly"></label></div>
+            </div>
+
+            <div class="section">
+                <div class="text-block-lab11">Лабораторна 11</div>
+            </div>
+            <div class="Tripple">
+                <div class="oneOf">
+                    Завдання 1<br>
+                    <a href="./lab11/First.html">Детальніше >></a>
+                </div>
+                <div class="oneOf">
+                    Завдання 2<br>
+                    <a href="./lab11/Second.html">Детальніше >></a>
+                </div>
+                <div class="oneOf">
+                    Завдання 3<br>
+                    <a href="./lab11/Third.html">Детальніше >></a>
+                </div>
             </div>
 
             <div class="section">
