--- a/Biography.html
+++ b/Biography.html
@@ -5,8 +5,8 @@
     <title>Загальна інформація</title>
     <link rel="stylesheet" href="Biography_style.css">
     
-    <link rel="stylesheet" href="Menu.css">
-    <script src="Menu.js"></script>
+    <link rel="stylesheet" href="./lab10/Menu.css">
+    <script src="./lab10/Menu.js"></script>
 </head>
 <body onclick="hideMenu()" oncontextmenu="showMenu(event); return false;">
     <div class="container">
