--- a/lab9/Lab9.html
+++ b/lab9/Lab9.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>JavaScript Завдання</title>
     
-    <link rel="stylesheet" href="Menu.css">
-    <script src="Menu.js"></script>
+    <link rel="stylesheet" href="./lab10/Menu.css">
+    <script src="./lab10/Menu.js"></script>
 </head>
 <body onclick="hideMenu()" oncontextmenu="showMenu(event); return false;">
     <script src="Lab9.js"></script>
