REmoved some staff

--- a/lab9/Lab9.html
+++ b/lab9/Lab9.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>JavaScript Завдання</title>
     
-    <link rel="stylesheet" href="./lab10/Menu.css">
-    <script src="./lab10/Menu.js"></script>
 </head>
-<body onclick="hideMenu()" oncontextmenu="showMenu(event); return false;">
+<body>
     <script src="Lab9.js"></script>
 
     <h2>Довжина рядка</h2>
@@ -75,13 +73,6 @@
     <button onclick="calculateHypotenuse()">Обчислити</button>
     <p id="hypotenuseResult"></p>
 
-
-    <div id="custommenu">
-    <div onclick="doAction('copy')">Скопіювати вміст документа</div>
-    <div onclick="doAction('close')">Закрити вікно</div>
-    <div onclick="doAction('fontIncrease')">Збільшити шрифт</div>
-    <div onclick="doAction('fontDecrease')">Зменшити шрифт</div>
-    <div onclick="doAction('changeBkg')">Змінити фон</div>
 </div>
 </body>
 </html>
