--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-2b67ebfa-f079-4512-af0d-389174bd74cc" data-elfsight-app-lazy></div>
 
-    <div class="header-title">Мій сайт</div>
+    <div class="header-title" data-testid="HeadTittle">Мій сайт</div>
 
     <div class="content-area">
 
