--- a/lab11/Third.html
+++ b/lab11/Third.html
@@ -9,16 +9,16 @@
 <body>
   <h3>Оберіть щонайменше 5 опцій:</h3>
   <div id="checkboxes">
-    <label><input type="checkbox" value="1"> Варіант 1</label><br>
-    <label><input type="checkbox" value="2"> Варіант 2</label><br>
-    <label><input type="checkbox" value="3"> Варіант 3</label><br>
-    <label><input type="checkbox" value="4"> Варіант 4</label><br>
-    <label><input type="checkbox" value="5"> Варіант 5</label><br>
-    <label><input type="checkbox" value="6"> Варіант 6</label><br>
-    <label><input type="checkbox" value="7"> Варіант 7</label><br>
-    <label><input type="checkbox" value="8"> Варіант 8</label><br>
-    <label><input type="checkbox" value="9"> Варіант 9</label><br>
-    <label><input type="checkbox" value="10"> Варіант 10</label><br>
+    <label data-testid="labal1"><input type="checkbox" value="1"> Варіант 1</label><br>
+    <label data-testid="labal2"><input type="checkbox" value="2"> Варіант 2</label><br>
+    <label data-testid="labal3"><input type="checkbox" value="3"> Варіант 3</label><br>
+    <label data-testid="labal4"><input type="checkbox" value="4"> Варіант 4</label><br>
+    <label data-testid="labal5"><input type="checkbox" value="5"> Варіант 5</label><br>
+    <label data-testid="labal6"><input type="checkbox" value="6"> Варіант 6</label><br>
+    <label data-testid="labal7"><input type="checkbox" value="7"> Варіант 7</label><br>
+    <label data-testid="labal8"><input type="checkbox" value="8"> Варіант 8</label><br>
+    <label data-testid="labal9"><input type="checkbox" value="9"> Варіант 9</label><br>
+    <label data-testid="labal10"><input type="checkbox" value="10"> Варіант 10</label><br>
   </div>
 
   <div id="warning" class="hidden">Вибрано замало прапорців!</div>
