--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
 
         <div class="right-ad-block">
-            <img onmouseover="MouseOver(this)" onmouseout="MouseOut(this)" id= "rightAd" src="https://study.com/cimages/multimages/16/burgerad15179945781952220614.png">
+            <img data-testid="hoverOver" onmouseover="MouseOver(this)" onmouseout="MouseOut(this)" id= "rightAd" src="https://study.com/cimages/multimages/16/burgerad15179945781952220614.png">
         </div>
 
 <!-- Elfsight Countdown Timer | Untitled Countdown Timer -->
