--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
             </div>
 
             <div class="section">
+                <div class="text-block">PHP<a href="./NewYear/PhpMainHub.html" class="details-link">Детальніше >></a></div>
+            </div>
+            
+            <div class="section">
                 <!-- Elfsight Weather | Untitled Weather -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-eac23bac-ee70-43a7-ad77-ea9cd41bb750" data-elfsight-app-lazy></div>
